# pr_assets

./: CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  convert_kinbody_to_urdf.py  fix_urdf.py  manifest.xml  package.xml
data/furniture/: bookcase.kinbody.xml  bookcase.stl  bookcase.urdf  bookcase_easy.urdf  bookcase_hard.urdf  bookcase_original.urdf  bookcase_wheels.kinbody.xml  emprise_table_feeding.urdf  factory.urdf  roof.urdf  roof_prior.urdf  short_table.urdf  sniyaz_bin_table.urdf  sniyaz_ceiling.urdf  table.kinbody.xml  table.urdf  table_feeding.urdf  table_prior.urdf  uw_demo_table.urdf  uw_nice_table.urdf  wheelchair assembly.STL  wheelchair.dae  wheelchair.stl  wheelchair.urdf  wheelchair_assembly.dae  wheelchair_assembly.kinbody.xml  wheelchair_collision.dae  wheelchair_collision.stl  wheels.kinbody.xml  wheels.urdf  workspace_feeding_demo.urdf  workspace_feeding_without_wall.urdf
data/herb-benchmarking/: book.urdf  bottle.stl  bottle.urdf  coffee.stl  coffee.urdf  pepsi.urdf
data/kitchen/: oven.stl  oven.urdf  pr_kitchen.env.xml  pr_kitchen.kinbody.xml  prkitchen_dishwasher.kinbody.xml  prkitchen_lowercabinets.kinbody.xml  prkitchen_microwave.kinbody.xml  prkitchen_refrigerator.kinbody.xml  prkitchen_refrigerator.robot.xml  prkitchen_upper.kinbody.xml  prkitchen_walls.kinbody.xml  toyota_silver_microwave.kinbody.xml
data/kitchen/meshes/: cabinet_00.wrl  cabinet_10.wrl  cabinet_20_handle.wrl  cabinet_32.wrl  cabinet_33.wrl  dish_base.wrl  dish_door.wrl  dish_handle.wrl  door_lower.wrl  door_upper.wrl  fridge_shelf.wrl  lower_cabinets.wrl  lower_handle.wrl  microwave_base.dae  microwave_base.wrl  microwave_button.wrl  microwave_door.wrl  oven.stl  refrigerator_base.wrl  upper_0.wrl  upper_1.wrl  upper_2.wrl  upper_3.wrl  upper_4.wrl  upper_base.wrl  upper_handle.wrl  upper_handle_1.wrl  upper_handle_4.wrl  walls.wrl
data/objects/: aikido_tag_data.json  aikido_tag_data.json~  aikido_tag_data_bowl_glass.json  airplane_box.urdf  bin.kinbody.xml  bin.urdf  bite_disposal.kinbody.xml  block.kinbody.xml  block.urdf  block_bin.kinbody.xml  block_bin.urdf  bowl.kinbody.xml  bowl.urdf  box.kinbody.xml  box.urdf  can.urdf  can_collision.stl  can_visual.dae  cheezit.urdf  coffee_jar.kinbody.xml  coffee_jar.urdf  conference_table.kinbody.xml  cube_mesh.stl  dumbbell.urdf  food_item.urdf  fork.kinbody.xml  fork.stl  fork.urdf  fork_collision.stl  forque.kinbody.xml  forque.stl  forque_collision.stl  frame.kinbody.xml  fuze_bottle.kinbody.xml  fuze_bottle.urdf  fuze_bottle_scan.dae  glass.kinbody.xml  glass.stl  glass.urdf  human.kinbody.xml  (+65 more)
data/racecar/: block.urdf  ground.urdf
data/tags/: apriltag_blank.dae
data/test/: plane.xml
src/: .apriltag_mesh.py.swp
src/pr_ordata/: .apriltag_kinbody.py.swp  apriltag_kinbody.py
(+233 files in other folders)
