<?xml version="1.0"?>
<package>
  <name>pr_assets</name>
  <version>0.3.0</version>
  <description>
    The pr_assets package provides OpenRAVE-specific environments, meshes,
    articulated bodies, robots, and database files used by the Personal
    Robotics Lab at the University of Washington.
  </description>
  <url type="repository">https://github.com/personalrobotics/pr_assets</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
